--- a/style.css
+++ b/style.css
@@ -1,128 +1,1 @@
-* {
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-}
-body {
-    font-family: sans-serif;
-    background-image: url("/Images/t.jpg");
-}
-nav {
-    background: yellow;
-    height: 70px;
-    width: 100%;
-   
-    
-}
-label.name {
-    color: rgb(0, 0, 0);
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0px 50px;
-    font-weight: bold;
-   }
-   label.name:hover {
-    color: white;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0px 50px;
-    font-weight: bold;
-   }
-nav ul {
-    float: right;
-    margin-right: 20px;
-    
-}
-nav ul li {
-   display: inline-block;
-   line-height: 80px;
-   margin: 0 5px
-   
-}
-nav ul li a {
-    color: white;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
-    
-    
-}
-a.nav,a:hover{
-    background: black;
-    transition: .5s;
-    
-}
-
-#about  {
-    border: 5px solid rgb(214, 238, 2);
-    justify-content: center;
-    position:relative; left:100px; top:5px;
-    height: 10%;
-    width: 80%;
-    text-align: center;
-    margin: 30px;
-    padding: left;
-    color:white;
-    font-family: sans-serif;
-    font-size: larger;
-
-    
-}
-  img {
-    border-radius: 100%;
-    height: 200px;
-    width: 200px;
-    
-} 
- #contact  {
-    display: grid;
-    border: 2px solid rgb(17, 17, 17) ;
-    
-     padding: left;
-     box-sizing: border-box0;
-     height: 50%;
-    width: 15%;
-    color: rgb(0, 0, 0);
-    justify-content: center;
-    background-color: yellow;
-    
-}
-#link  {
-    display: grid;
-    border: 2px solid yellow;
-    height: 50%;
-    width: 20%;
-    text-align: center;
-    margin: 30px;
-    position: relative;
-    top: -300px;
-    left: 206px;
-    color: rgb(208, 211, 12);
-}
-#link a {
-    background-color: yellow;
-    color: black;
-}
-#link a:hover {
-    background-color: rgb(7, 7, 7);
-    color: yellow;
-}
-#list  {
-    display: grid;
-    border: 2px solid yellow;
-    height: 50%;
-    width: 20%;
-    text-align: center;
-    margin: 30px;
-    position: relative;
-    top: -300px;
-    left: 206px;
-    color: rgb(208, 211, 12);
-}
-footer{
-    background-color: yellow;
-    text-align: center;
-}
+test
