--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ a.nav,a:hover{
 .contact{
 justify-content: center;
     position:relative; left:500px; top:5px;
+    border-radius: 10%;
     height: 25%;
     width: 40%;
     text-align: center;
@@ -78,4 +79,25 @@ justify-content: center;
 section.t a {
     color: white;
     text-transform: uppercase;
+}
+H2.title {
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+
+}
+.column {
+    float: left;
+    width: 33.33%;
+    color: black;
+    border: 4px solid black;
+    background-color: #89CFF0;
+    text-align: center;
+  }
+
+ a.links{
+     color: black;
+ }
+ a.links:hover{
+    color: white;
 }
